; ModuleID = '/home/carl/AnghaBench/vlc/modules/mux/mp4/extr_libmp4mux.c_box_new.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/mux/mp4/extr_libmp4mux.c_box_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @box_new(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %5 = call i32* @malloc(i32 4)
  store i32* %5, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %23

9:                                                ; preds = %1
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @bo_init(i32* %10, i32 1024)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %9
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @bo_free(i32* %14)
  store i32* null, i32** %2, align 8
  br label %23

16:                                               ; preds = %9
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @bo_add_32be(i32* %17, i32 0)
  %19 = load i32*, i32** %4, align 8
  %20 = load i8*, i8** %3, align 8
  %21 = call i32 @bo_add_fourcc(i32* %19, i8* %20)
  %22 = load i32*, i32** %4, align 8
  store i32* %22, i32** %2, align 8
  br label %23

23:                                               ; preds = %16, %13, %8
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @bo_init(i32*, i32) #1

declare dso_local i32 @bo_free(i32*) #1

declare dso_local i32 @bo_add_32be(i32*, i32) #1

declare dso_local i32 @bo_add_fourcc(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
